--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,13 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <filter>
+  	<filter-name>Auth</filter-name>
+  	<filter-class>meuprojeto.filtro.AutorizaUsuario</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>Auth</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
